# Auro14B

./: .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLOUDFLARE_PRODUCTION.md  CONTRIBUTING.md  DESIGN.md  LICENSE  MANIFEST.in  PRODUCT.md  README.md  REPLIT_RETIREMENT.md  USE_AURO.cmd  pyproject.toml  requirements.txt  spectral_engine.py
.github/workflows/: auro-bridge.yml  auro-consolidation.yml  auro-constitutional-substrate.yml  (+17 more)
auro14b-app/: package.json  wrangler.jsonc
auro_foundry/: __init__.py  app.py  benchmarks.py  cli.py  coding_harness.py  config.py  consolidate.py  corpus.py  dataset.py  execution.py  federation.py  generation.py  mesie_bridge.py  model.py  server.py  tokenizer.py  training.py  workers.py
auro_native_llm/: __init__.py  atomic_colony.py  cli_family.py  family.py  him_mcp.py  mesie_compute.py  native_model.py  native_runtime.py  open_weights.py  receipt.py  subagents.py  types.py  use.py
bridge/: ROOT_FEED_RECEIPT.md  feeder-manifest.json
browser-brain/: README.md  package-lock.json  package.json
browser-runtime/: .gitignore  README.md  index.html  package-lock.json  package.json
cloudflare-platform/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
config/: auro_bridge.example.json
configs/: cloudflare_runtime.json
data/: __init__.py  him_open_corpus.txt  him_sft.jsonl
deliverables/: AISVectorPolyglot_Integration_Report.json  Copilot_MESIE_Diagnostic_Benchmark.json  MAESI_Fast_Compute_Benchmark.json  MAESI_SDK_Run_Report.json  MESIE_Chaos_Technical_50_Report.json  MESIE_Chaos_Technical_50_Report.md  MESIE_Enterprise_Chaos_Flow_100_Paper.md  MESIE_Enterprise_Chaos_Flow_100_Report.json  MESIE_Laptop_Research_Report.md  MESIE_Monte_Carlo_Enterprise_Report.json  MESIE_Monte_Carlo_Enterprise_Report.md  MESIE_Multi_Domain_Suite_Report.json  MESIE_Multi_Domain_Suite_Report.md  MESIE_Native_Tools_Catalog.json  SOLUS_Math_Caretakers_Report.json  github_itsnotailabs.json  mesie_spectral_draco_20260614_035734.json
docs/: AURO_CONSOLIDATION_RUNBOOK.md  AURO_FOUNDRY_OPERATOR.md  HIM_API.md  HIM_MARKETING_KIT.md  HIM_MULTI_MODEL_ORCHESTRATOR.md  HIM_PRODUCT_CARD.md  LAUNCH_HIM_TODAY.md  MEDINA_SOVEREIGN_TRAINING_FABRIC.md  MESIE_BRAIN_EXTRACTION.md  MESIE_Charter_Research_Paper.md  MESIE_RUNNER_COMPUTE_PLANE.md  MESIE_v0.2.0_Protocols_and_Transformers_Working_Paper.md  MODEL_FAMILY.md  NEXUS_NOVA_PLATFORM.md  NOVA_PRODUCTION_FLEET.md  QUANTITATIVE_INTELLIGENCE_GUIDE.md  SCRIPTURAL_SYSTEMS_ARCHITECTURE.md  api_reference.md  architecture.md  cloudflare.md  cloudflare_runtime.md  data.md  fingerprint_ann_pipeline.md  index.md  laptop_virtual_chip.md  maesi_sdk.md  marketing_speed.md  mesie_spectral_draco.md  octopus_engineering.md  pypi_release.md  research_program.md  zenodo_release_notes.md
evidence/: him-public-alpha-readiness.json  operator-console-readiness.json
examples/: 01_load_and_validate.py  02_match_two_records.py  03_generate_psd.py  04_generate_fas.py  05_rotdnn_workflow.py  06_create_spectral_embedding.py  07_cognitive_memory_adapter.py  08_3d_connectome_brain.py  09_load_bundled_data.py  10_orbital_edge_50d.py  11_octopus_internal_api.py  12_multi_domain_suites.py  13_fingerprint_ann_pipeline.py
figures/: architecture_overview.md  cognitive_integration.md  embedding_pipeline.md  spectral_pipeline.md
him-web3/: .env.example  README.md  package-lock.json  package.json
mesie/: __init__.py  cli.py  sdk.py
mesie-desktop/: README.md  package.json
mobile-runtime/: .gitignore  App.js  README.md  app.json  package-lock.json  package.json
native_llm/: MODEL_CARD_AURO_TARGETS.md  PRODUCTION.md  README.md
phantom_native/: __init__.py  build.zig  neurocore.py  sovereign_tensor.py  swarm_runtime.py  taurus.py
production-grade-builder/: PACKET_POLICY.md  README.md
runner/: Dockerfile.cuda  docker-compose.yml  entrypoint.sh  healthcheck.py
scripts/: MESIE.psm1  benchmark_delta_attention.py  benchmark_structured_transformer.py  build_auro4b_prewired.py  build_dual_app.sh  build_unified_training_corpus.py  copilot_mesie_diagnostic_benchmark.py  determinism_benchmark.py  embed_my_library.py  embed_spectral_library.py  eval_him_generation.py  fix_reference_data.py  generate_laptop_research_report.py  him_context.py  hybrid_demo.py  inspect_auro4b.py  inventory_auro_checkpoints.py  launch_auro_mcp_bridge.py  launch_him.py  mesie_spectral_draco_benchmark.py  monte_carlo_enterprise_benchmark.py  orbital_edge_50d_analysis.py  orbital_edge_50d_report.json  power_stack_demo.py  prepare_browser_model.py  replit_start.sh  run_ais_polyglot_suite.py  run_autocycle_once.py  run_chaos_technical_50.py  run_enterprise_chaos_flow_100.py  run_fast_compute_benchmark.py  run_him_birth_observation.py  run_him_birth_observation_fast.py  run_him_launch_gate.py  run_internal_bus_demo.py  run_maesi_sdk.py  run_multi_domain_suites.py  run_nexus_nova_trials.py  run_production_gate.py  run_rank_demo.py  (+13 more)
tests/: test_advanced_modules.py  test_ai.py  test_ai_expanded_part1.py  test_ai_expanded_part2.py  test_atomic_colony.py  test_auro4b_architecture.py  test_auro_bridges.py  test_auro_checkpoint_portability.py  test_auro_consolidation.py  test_auro_foundry_e2e.py  test_auro_language_model.py  test_auro_model_family.py  test_auro_native_mesie.py  test_auro_organism.py  test_auro_scripture.py  test_auro_scripture_loop.py  test_auro_value.py  test_auro_work_chrome.py  test_browser_gateway.py  test_browser_model_package.py  test_browser_workspace_capabilities.py  test_bundled_data.py  test_bundled_training_smoke.py  test_chaos_brain.py  test_checkpoint_constitution.py  test_cloudflare_contract.py  test_compute_registry.py  test_connectome.py  test_constitutional_hybrid.py  test_context_engine.py  test_cosmology.py  test_cross_domain_experiment.py  test_data_sources.py  test_deep_modules.py  test_delta_attention.py  test_domain_adaptation.py  test_domain_suites.py  test_edge.py  test_embedded_use_cases.py  test_embeddings.py  (+83 more)
working-papers/: HIM_LANGUAGE_ENGINE_PRODUCTION_PASS.md  HIM_SPATIAL_LANGUAGE_MATURATION.md
(+784 files in other folders)
