[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesie"
version = "0.4.0"
description = "Multi-Element Spectral Intelligence Engine — spectral matching, generation, embeddings, transformer-based intelligence protocols, and cognitive integration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Alfredo Medina", email = "alfredo@itsnotailabs.com"}
]
keywords = ["spectral matching", "signal processing", "PSD", "FAS", "RotDnn", "embeddings", "AI", "transformers", "intelligence protocols"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.0",
]

[project.optional-dependencies]
full = [
    "scipy>=1.14",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "networkx>=3.4",
]
ml = [
    "transformers>=4.45",
    "torch>=2.4; platform_machine != 'arm64'",
]
ai = [
    "scipy>=1.14",
    "scikit-learn>=1.5",
    "networkx>=3.4",
    "transformers>=4.45",
    "torch>=2.4; platform_machine != 'arm64'",
]
intelligence = [
    "scipy>=1.14",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "networkx>=3.4",
    "transformers>=4.45",
    "torch>=2.4; platform_machine != 'arm64'",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "build>=1.2",
    "twine>=6.0",
]
julia = [
    "juliacall>=0.9",
]

[project.scripts]
mesie = "mesie.cli:main"
mesie-tools = "mesie.tools.cli:main"
mesie-web = "mesie.web.server:main"

[project.urls]
Homepage = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-"
Repository = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-"
Documentation = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/tree/main/docs"
"DOI / Zenodo" = "https://doi.org/10.5281/zenodo.20598320"
"PyPI Release Guide" = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/blob/main/docs/pypi_release.md"
"Cloudflare Worker" = "https://github.com/FreddyCreates/Multi-Element-Spectral-Intelligence-Engine-MESIE-/blob/main/workers/mesie-api/README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mesie*", "data*"]

[tool.setuptools.package-data]
data = ["reference/*.json", "benchmarks/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
