[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesie"
version = "0.5.0"
description = "MESIE spectral intelligence and Auro Foundry repository-native text model training, generation, and serving"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Alfredo Medina", email = "alfredo@itsnotailabs.com"}]
keywords = ["spectral intelligence", "MESIE", "Auro", "LLM", "text generation", "training", "transformers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
full = ["scipy>=1.14", "pandas>=2.2", "scikit-learn>=1.5", "networkx>=3.4"]
ml = ["transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
ai = ["scipy>=1.14", "scikit-learn>=1.5", "networkx>=3.4", "transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
intelligence = ["scipy>=1.14", "pandas>=2.2", "scikit-learn>=1.5", "networkx>=3.4", "transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
foundry = ["torch>=2.4", "numpy>=2.0"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "build>=1.2", "twine>=6.0"]
julia = ["juliacall>=0.9"]

[project.scripts]
mesie = "mesie.cli:main"
mesie-tools = "mesie.tools.cli:main"
mesie-web = "mesie.web.server:main"
auro-tokenizer-train = "auro_native_llm.tokenizer.train:main"
auro-build-corpus = "auro_native_llm.data.build_corpus:main"
auro-pretrain = "auro_native_llm.train.pretrain:main"
auro-eval = "auro_native_llm.eval.run:main"
auro-serve = "auro_native_llm.serve.local:main"
auro-foundry = "auro_foundry.app:main"
auro-foundry-serve = "auro_foundry.server:main"

[project.urls]
Homepage = "https://github.com/ItsNotAILABS/Auro14B"
Repository = "https://github.com/ItsNotAILABS/Auro14B"
Documentation = "https://github.com/ItsNotAILABS/Auro14B/tree/main/docs"
"DOI / Zenodo" = "https://doi.org/10.5281/zenodo.20598320"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mesie*", "auro_native_llm*", "auro_foundry*", "data*"]

[tool.setuptools.package-data]
data = ["reference/*.json", "benchmarks/*.json"]
auro_foundry = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
