[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mesie"
version = "0.6.0"
description = "MESIE and Auro Foundry repository-federated model training, evaluation, coding, and serving"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{name = "Alfredo Medina", email = "alfredo@itsnotailabs.com"}]
keywords = ["spectral intelligence", "MESIE", "Auro", "LLM", "training", "benchmarks", "coding harness"]
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
full = ["scipy>=1.14", "pandas>=2.2", "scikit-learn>=1.5", "networkx>=3.4"]
ml = ["transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
ai = ["scipy>=1.14", "scikit-learn>=1.5", "networkx>=3.4", "transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
intelligence = ["scipy>=1.14", "pandas>=2.2", "scikit-learn>=1.5", "networkx>=3.4", "transformers>=4.45", "torch>=2.4; platform_machine != 'arm64'"]
foundry = ["torch>=2.4", "numpy>=2.0"]
benchmarks = ["lm-eval>=0.4.8"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "build>=1.2", "twine>=6.0"]
julia = ["juliacall>=0.9"]

[project.scripts]
mesie = "mesie.cli:main"
mesie-tools = "mesie.tools.cli:main"
mesie-web = "mesie.web.server:main"
auro-tokenizer-train = "auro_native_llm.tokenizer.train:main"
auro-build-corpus = "auro_native_llm.data.build_corpus:main"
auro-pretrain = "auro_native_llm.train.pretrain:main"
auro-eval = "auro_native_llm.eval.run:main"
auro-serve = "auro_native_llm.serve.local:main"
auro-foundry = "auro_foundry.app:main"
auro-foundry-serve = "auro_foundry.server:main"
auro-consolidate = "auro_foundry.consolidate:main"
auro-family = "auro_native_llm.cli_family:main"
auro-lm = "auro_native_llm.model.cli:main"
auro-train = "auro_native_llm.model.train:main"
auro-scripture = "auro_native_llm.scripture.cli:main"
auro-work = "auro_native_llm.work.cli:main"
auro-api = "auro_native_llm.server.app:main"
auro-mind = "auro_native_llm.organism.cli:main"
auro-value-train = "auro_native_llm.organism.value_train:main"
auro-corpus = "auro_native_llm.corpus.cli:main"
auro-production = "auro_native_llm.organism.production:main"
auro-autocycle = "auro_native_llm.organism.autocycle:main"
auro-power-train = "auro_native_llm.mesie_power.power_train:main"\nauro-fleet = "auro_native_llm.production_fleet.cli:main"\nauro-fleet-serve = "auro_native_llm.production_fleet.server:main"

[project.urls]
Homepage = "https://github.com/ItsNotAILABS/Auro14B"
Repository = "https://github.com/ItsNotAILABS/Auro14B"
Documentation = "https://github.com/ItsNotAILABS/Auro14B/tree/main/docs"
"DOI / Zenodo" = "https://doi.org/10.5281/zenodo.20598320"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["mesie*", "auro_native_llm*", "auro_foundry*", "data*"]

[tool.setuptools.package-data]
data = ["reference/*.json", "benchmarks/*.json"]
auro_foundry = ["web/*.html", "web/*.css", "web/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
